Fix footer overlap issue

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -66,6 +66,7 @@ section {
   width: 100%;
   text-align: center;
   margin-top: 3em;
+  margin-bottom: 3em;
 }
 
 figure {
@@ -87,7 +88,7 @@ figure img{
 }
 
 footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   border-top: 0.1em solid #d3d3d3;
   width: 100%;
